# Sophia-Agent

./: .dockerignore  .env.example  .gitignore  03_memory_system (new).md  04_backend_integration (new).md  05_frontend_ux (new).md  06_implementation_spec (new).md  AGENTS.md  CLAUDE.md  COMPOUND_LOG.md  Makefile  README.md  SESSION_HISTORY_FLOW.md  SESSION_RESTORATION_INVESTIGATION.md  config.example.yaml  config.production.yaml  render.yaml  sophia_team_workflow.md  start-sophia.ps1  vercel.json
backend/: CLAUDE.md  Dockerfile.gateway  Dockerfile.langgraph  Makefile  README.md  langgraph.json  pyproject.toml
backend/app/channels/: base.py  manager.py  message_bus.py  service.py  session_resolver.py  store.py  telegram.py  telegram_linking.py
backend/app/gateway/: app.py  auth.py  config.py  inactivity_watcher.py  supabase_storage.py  telegram_link_store.py
backend/app/sophia/: __init__.py  bootstrap.py  extraction.py  gepa.py  golden_turns.py  handoffs.py  identity.py  (+5 more)
backend/migrations/: 2026_04_25_telegram_user_bindings.sql
backend/scripts/: migrate_supabase_artifacts.py  sandbox_capability_check.py
backend/tests/: test_artifacts_router.py  test_builder_artifact_ceiling_replication.py  test_builder_command_integration.py  test_builder_delivery_supabase_fallback.py  test_builder_events_publisher.py  test_builder_events_worker.py  test_builder_notifier_pushed_status.py  test_builder_stress_live.py  test_builder_turn_cap.py  test_builder_web_policy.py  test_channels.py  test_checkpointer.py  test_checkpointer_none_fix.py  test_client_live.py  test_companion_wakeup.py  test_dangling_tool_call_middleware.py  test_deepagents_dependency.py  test_deerflow_pydantic_warning_filter.py  test_dev_fake_chat_model.py  test_docker_sandbox_mode_detection.py  test_executor_terminal_push.py  test_extraction.py  test_gateway_app_mounts.py  test_gateway_mirror.py  test_gateway_notify.py  test_gateway_sophia.py  test_handoffs.py  test_identity.py  test_inactivity_watcher.py  test_internal_artifacts_router.py  test_internal_builder_tasks_router.py  test_local_sandbox_encoding.py  test_mem0_client.py  test_offline_pipeline.py  test_render_markdown_to_pdf.py  test_review_metadata_store.py  test_sandbox_capability_check.py  test_sandbox_tools.py  test_sessions_gateway.py  test_sophia_agents_md_injection.py  (+22 more)
(+1263 files in other folders)
