[project]
name = "deer-flow"
version = "0.1.0"
description = "LangGraph-based AI agent system with sandbox execution capabilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deerflow-harness",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "sse-starlette>=2.1.0",
    "uvicorn[standard]>=0.34.0",
    "lark-oapi>=1.4.0",
    "slack-sdk>=3.33.0",
    "python-telegram-bot>=21.0",
    "langgraph-sdk>=0.1.51",
    "markdown-to-mrkdwn>=0.3.1",
    "mem0ai>=1.0.9",
    # Builder document-generation runtime.
    # These libraries are imported by skill scripts the builder executes
    # (ppt-generation, data-analysis, image-generation) and by any PDF/DOCX
    # deliverable the model decides to produce. Pre-installing them keeps the
    # builder from burning its turn budget on `pip install` inside the sandbox,
    # which in Render routinely trips the 12-turn hard ceiling or the
    # Anthropic HTTP read timeout.
    "pillow>=10.4.0",
    "python-pptx>=1.0.2",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.5",
    "pypdf>=5.1.0",
    "reportlab>=4.2.5",
    "fpdf2>=2.8.1",
    "markdown>=3.7",
    "duckdb>=1.1.3",
    "requests>=2.32.3",
    # Visualization runtime — matplotlib/seaborn charts embedded in PDFs,
    # numpy/pandas for any data wrangling the builder needs before rendering.
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "numpy>=2.1.0",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.14.11"]

[tool.uv.workspace]
members = ["packages/harness"]

[tool.uv.sources]
deerflow-harness = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages/harness"]
filterwarnings = [
    'ignore:datetime.datetime.utcfromtimestamp\(\) is deprecated and scheduled for removal in a future version.*:DeprecationWarning:lark_oapi\.ws\.pb\.google\.protobuf\.internal\.well_known_types',
    'ignore:websockets.InvalidStatusCode is deprecated:DeprecationWarning:lark_oapi\.ws\.client',
    'ignore:websockets\.legacy is deprecated.*:DeprecationWarning:websockets\.legacy',
    'ignore:Call to deprecated method findAll\..*:DeprecationWarning:readabilipy\.simplifiers\.html',
]
